Added last few permutations of cf state

--- a/src/app/community-fund/payment-request-list/payment-request-list.component.html
+++ b/src/app/community-fund/payment-request-list/payment-request-list.component.html
@@ -102,7 +102,11 @@
                   paymentRequest.status === 'accepted' ||
                   paymentRequest.status ===
                     'accepted waiting for end of voting period',
-                rejected: paymentRequest.status === 'rejected',
+                rejected:
+                  paymentRequest.status === 'rejected' ||
+                  paymentRequest.status ===
+                    'rejected waiting for end of voting period
+                ',
                 expired:
                   paymentRequest.status === 'expired' ||
                   paymentRequest.status ===
