Made button colours consistent

--- a/src/app/settings/device-utils/device-utils.component.html
+++ b/src/app/settings/device-utils/device-utils.component.html
@@ -32,10 +32,15 @@
   </mz-modal-header>
   <mz-modal-content>
     <p>
-      You are about to restart your Stakevbox, are you sure?
+      You are about to restart your Stakebox, are you sure?
     </p>
 
-    <button mz-button mz-modal-close type="submit">
+    <button
+      mz-button
+      mz-modal-close
+      type="submit"
+      class="waves-effect waves-light btn blue lighten-2"
+    >
       Yes
     </button>
   </mz-modal-content>
@@ -60,7 +65,12 @@
         <input type="password" required />
       </label>
 
-      <button mz-button mz-modal-close type="submit">
+      <button
+        mz-button
+        mz-modal-close
+        class="waves-effect waves-light btn blue lighten-2"
+        type="submit"
+      >
         Update Stakebox UI
       </button>
     </form>
