--- a/src/app/settings/wallet-utils/wallet-utils.component.html
+++ b/src/app/settings/wallet-utils/wallet-utils.component.html
@@ -55,7 +55,12 @@
         Wallet file
         <input type="number" required />
       </label>
-      <button mz-button mz-modal-close type="submit">
+      <button
+        mz-button
+        mz-modal-close
+        class="waves-effect waves-light btn blue lighten-2"
+        type="submit"
+      >
         Unlock Wallet
       </button>
     </form>
@@ -81,7 +86,12 @@
         <input type="password" required />
       </label>
 
-      <button mz-button mz-modal-close type="submit">
+      <button
+        mz-button
+        mz-modal-close
+        class="waves-effect waves-light btn blue lighten-2"
+        type="submit"
+      >
         Update NavCoin
       </button>
     </form>
@@ -107,7 +117,12 @@
         <input type="password" required />
       </label>
 
-      <button mz-button mz-modal-close type="submit">
+      <button
+        mz-button
+        mz-modal-close
+        class="waves-effect waves-light btn blue lighten-2"
+        type="submit"
+      >
         Download Wallet
       </button>
     </form>
