Fixed no filter by default. Fixed payment requests not being pulled down

--- a/src/app/community-fund/payment-request-list/payment-request-list.component.html
+++ b/src/app/community-fund/payment-request-list/payment-request-list.component.html
@@ -26,7 +26,7 @@
             [withGap]="true"
             [label]="'All'"
             id="PR-ALL"
-            value="ALL"
+            value="PR-ALL"
             type="radio"
           />
         </mz-radio-button-container>
@@ -39,7 +39,7 @@
             [withGap]="true"
             [label]="'Pending'"
             id="PR-PENDING"
-            value="PENDING"
+            value="PR-PENDING"
             type="radio"
           />
         </mz-radio-button-container>
@@ -52,7 +52,7 @@
             [withGap]="true"
             [label]="'Accepted'"
             id="PR-ACCEPTED"
-            value="ACCEPTED"
+            value="PR-ACCEPTED"
             type="radio"
           />
         </mz-radio-button-container>
@@ -64,7 +64,7 @@
             [withGap]="true"
             [label]="'Rejected/Expired'"
             id="PR-FAILED"
-            value="FAILED"
+            value="PR-FAILED"
             type="radio"
           />
         </mz-radio-button-container>
