--- a/src/app/settings/device-utils/device-utils.component.html
+++ b/src/app/settings/device-utils/device-utils.component.html
@@ -74,6 +74,7 @@
         mz-modal-close
         class="waves-effect waves-light btn blue lighten-2"
         type="submit"
+        (click)="onSubmitUpdate()"
       >
         Update Stakebox UI
       </button>
