removed formgroup directive

--- a/src/app/settings/device-utils/device-utils.component.html
+++ b/src/app/settings/device-utils/device-utils.component.html
@@ -59,7 +59,7 @@
       UI to the latest version
     </p>
 
-    <form [formGroup]="">
+    <form #updateUiForm="ngForm">
       <label>
         Web interface Password:
         <input
