added errors and form field name.

--- a/src/app/settings/device-utils/device-utils.component.html
+++ b/src/app/settings/device-utils/device-utils.component.html
@@ -65,11 +65,12 @@
         <input
           type="password"
           id="password"
+          name="password"
           class="validate"
           required
-          [(ngModel)]="deviceUtils.password" />
+          [(ngModel)]="deviceUtils.password"
+          />
       </label>
-
       <button
         mz-button
         mz-modal-close
