Implemented change wallet password

--- a/src/app/settings/change-wallet-password/change-wallet-password.component.html
+++ b/src/app/settings/change-wallet-password/change-wallet-password.component.html
@@ -44,7 +44,7 @@
           mz-button
           type="submit"
           class="waves-effect waves-light btn right blue lighten-2"
-          [disabled]="!passwordForm.valid"
+          [disabled]="!passwordForm.valid || buttonDebounce"
         >
           Update
         </button>
@@ -66,6 +66,6 @@
   </mz-modal-content>
   <mz-modal-footer>
     <button mz-button [flat]="true" mz-modal-close>Cancel</button>
-    <button mz-button mz-modal-close (click)="onSubmit()">Update</button>
+    <button mz-button mz-modal-close (click)="onSubmit()" class="blue lighten-2">Update</button>
   </mz-modal-footer>
 </mz-modal>
