CLears password on modal close

--- a/src/app/settings/ui-password/ui-password.component.html
+++ b/src/app/settings/ui-password/ui-password.component.html
@@ -87,7 +87,21 @@
     </form>
   </mz-modal-content>
   <mz-modal-footer>
-    <button mz-button [flat]="true" mz-modal-close>Cancel</button>
-    <button mz-button mz-modal-close (click)="onSubmit()">Update</button>
+    <button
+      mz-button
+      [flat]="true"
+      mz-modal-close
+      (click)="uiPassword.password = undefined"
+    >
+      Cancel
+    </button>
+    <button
+      mz-button
+      mz-modal-close
+      (click)="onSubmit()"
+      class="blue lighten-2"
+    >
+      Update
+    </button>
   </mz-modal-footer>
 </mz-modal>
