updated some names to NavDroid

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mz-navbar navbarClass="nav-bar">
-  <a routerlink="/" class="site-logo">NavCoin StakeBox</a>
+  <a routerlink="/" class="site-logo">NavDroid</a>
   <mz-navbar-item-container *ngIf="authed" [align]="'right'">
     <mz-navbar-item class="reg-menu"
       ><a routerLink="/">Overview</a></mz-navbar-item
