reworded to submit

--- a/src/app/settings/wallet-utils/wallet-utils.component.html
+++ b/src/app/settings/wallet-utils/wallet-utils.component.html
@@ -85,7 +85,7 @@
         type="submit"
         [disabled]="!walletUtils.password || !walletUtils.wallet"
       >
-        Import Wallet
+        Submit
       </button>
     </form>
   </mz-modal-content>
@@ -122,7 +122,7 @@
         type="submit"
         [disabled]="!walletUtils.password"
       >
-        Update Daemon
+        Submit
       </button>
     </form>
   </mz-modal-content>
@@ -159,7 +159,7 @@
         type="submit"
         [disabled]="!walletUtils.password"
       >
-        Update Daemon
+        Submit
       </button>
     </form>
   </mz-modal-content>
@@ -196,7 +196,7 @@
         type="submit"
         [disabled]="!walletUtils.password"
       >
-        Backup Wallet
+        Submit
       </button>
     </form>
   </mz-modal-content>
