updating modal reference

--- a/src/app/settings/device-utils/device-utils.component.html
+++ b/src/app/settings/device-utils/device-utils.component.html
@@ -28,7 +28,7 @@
       <button
         [disabled]="disableRestartWebButton"
         class="waves-effect waves-light btn left blue lighten-2"
-        (click)="restartWeb.openModal()"
+        (click)="restartWebModal.openModal()"
       >
         Reload NavDroid
       </button>
