renamed restart to reboot

--- a/src/app/settings/device-utils/device-utils.component.html
+++ b/src/app/settings/device-utils/device-utils.component.html
@@ -10,7 +10,7 @@
         class="waves-effect waves-light btn left blue lighten-2"
         (click)="restartModal.openModal()"
       >
-        Restart NavDroid
+        Reboot NavDroid
       </button>
     </div>
 
@@ -42,7 +42,7 @@
   </mz-modal-header>
   <mz-modal-content>
     <p>
-      Please enter your NavDroid user password to restart your NavDroid.
+      Please enter your NavDroid user password to reboot your NavDroid.
     </p>
 
     <form #restartStakeBoxForm="ngForm" (ngSubmit)="onSubmitRestart()">
